--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "dev": "node app.js",
     "build":"npm i",
     "test": "jest --runInBand --verbose --detectOpenHandles"
